# bot_arbitragem

./: .env.example  README.md  pyproject.toml
examples/: config.mock.yaml
src/bot_arbitragem/: __init__.py  cli.py  config.py  engine.py  exchanges.py  models.py
tests/: test_config.py  test_engine.py
